# Text-Summarizer

./: MANUAL_DEPLOY.md  README.md  better_test.json  main.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  test_api.py  test_request.json
static/: index.html
